# bgfx-2d

./: .gitmodules  CMakeLists.txt  compile_shader.py
res/shaders/sprite/: sprite.fs  sprite.vs  varying.def.sc
src/: global.hpp  main.cpp  main.hpp
src/_compiled/shaders/sprite/: sprite.fs.hpp  sprite.vs.hpp
src/rendering/: camera.cpp  camera.hpp  sprite.cpp  sprite.hpp  vertex.hpp
src/servers/: input.cpp  input.hpp  loader.cpp  loader.hpp  visual.cpp  visual.hpp
src/shaders/: color.hpp
